--- a/ImageLibraryTest/ImageLibraryTest.csproj
+++ b/ImageLibraryTest/ImageLibraryTest.csproj
@@ -50,7 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest_Model.cs" />
+    <Compile Include="ModelUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
