Added image. Put some status labels.

--- a/ImageLibrary/ImageLibrary.csproj
+++ b/ImageLibrary/ImageLibrary.csproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="impactViewer.ico" />
+    <None Include="Resources\rotateAntiClockwiseButton.BackgroundImage.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
