Enough unit tests.

--- a/ImageLibraryTest/ImageLibraryTest.csproj
+++ b/ImageLibraryTest/ImageLibraryTest.csproj
@@ -50,7 +50,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="MockView.cs" />
     <Compile Include="ModelUnitTests.cs" />
+    <Compile Include="PresenterUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
